Sun Jun 16 08:43:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_divmod): New function.
	  (absint_numwords_generic): Use bary_divmod.
	  (bigdivrem_num_extra_words): Extracted from bigdivrem.
	  (bigdivrem_single): Ditto.
	  (bigdivrem_normal): Ditto.
	  (BIGDIVREM_EXTRA_WORDS): Defined.

Sun Jun 16 05:51:51 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c: Fixup around GC by MALLOC.
	  Add allocate size to malloc_increase before GC
	  for updating limit in after_gc_sweep.
	  Reset malloc_increase into garbage_collect()
	  for preventing GC again soon.

Sun Jun 16 05:15:36 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c: Add some colums to more detail profile.
	  new colums: Allocated size, Prepare Time, Removing Objects, Empty Objects

Sun Jun 16 02:04:40 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_prof_timer_stop): Merge function codes of GC_PROFILE_MORE_DETAIL and !GC_PROFILE_MORE_DETAIL.
	* gc.c (gc_prof_mark_timer_start): Ditto.
	* gc.c (gc_prof_mark_timer_stop): Ditto.
	* gc.c (gc_prof_sweep_slot_timer_start): Ditto.
	* gc.c (gc_prof_sweep_slot_timer_stop): Ditto.
	* gc.c (gc_prof_set_malloc_info): Ditto.
	* gc.c (gc_prof_set_heap_info): Ditto.

Sat Jun 15 23:50:24 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_sub): New function.
	  (absint_numwords_generic): Use bary_sub.
	  (bigsub_core): Skip unnecessary copy.

Sat Jun 15 22:05:30 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): New function.
	  (absint_numwords_generic): Use bary_mul.
	  (bary_mul_single): Extracted from bigmul1_single.
	  (bary_mul_normal): Extracted from bigmul1_normal.

Sat Jun 15 20:13:46 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_unpack): Extracted from rb_integer_unpack_internal.
	  (absint_numwords_generic): Use bary_unpack.
	  (roomof): Defined.
	  (bdigit_roomof): Defined.
	  (BARY_ARGS): Defined.
	  (bary_unpack): Declared.

Sat Jun 15 19:35:04 2013  Tanaka Akira  <akr@fsij.org>
